finished html and css

--- a/index.html
+++ b/index.html
@@ -30,44 +30,36 @@
             </div>
         </header>
 
-        <!-- Image Area-->
-        <main>
-           
-                    <div class="row justify-content-center">
-                        <div class="col-lg-12  text-center">
-                            <img class="img1 img-fluid" src="IMG_9901.JPG"  width="1000" height="1000" id="Change-Image">
-                        </div>
-                    </div>
-                    <div class="row justify-content-center">
-                        <div class="col-8 text-center m-3">
-                            <h3 id="Change-Text"> </h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
+        <!--Image Class-->
+<div class="row g-4">
+    <div class="col-lg-4 col-sm-12 col-12 zoom mx-auto ">
+      <div class="img-thumbnail borderfix card-image">
+        <img src="IMG_9901.JPG" class="img-fluid">
+        <br> 
+        <br>
+        <h5 class=>What else happened on my birthday?</h5>
+        <p class="lead">Click on the buttons below to see somethings that happened on my birthday.</p>
+      </div>
+    </div>
              <!--Buttons-->
              <div class="row text-center justify-content-center m-3 g-4 align-items-center">
-                <hr>
                 <div class="col-12 col-lg-2 my-2">
-                    <button onclick="Change1264()" class="btn">1264</button>
+                    <button onclick="Change1264()" class="btn-hover btn-2 color-8">1264</button>
                 </div>
                 <div class="col-12 col-lg-2 my-2">
-                    <button onclick="Change1858()" class="btn">1858</button>
+                    <button onclick="Change1858()" class="btn-hover btn-2 color-8">1858</button>
                 </div>
                 <div class="col-12 col-lg-2 my-2">
-                    <button onclick="Change1911()" class="btn">1911</button>
+                    <button onclick="Change1911()" class="btn-hover btn-2 color-8">1911</button>
                 </div>
                 <div class="col-12 col-lg-2 my-2">
-                    <button onclick="Change1959()" class="btn">1959</button>
+                    <button onclick="Change1959()" class="btn-hover btn-2 color-8">1959</button>
                 </div>
                 <div class="col-12 col-lg-2 my-2">
-                    <button onclick="Change1996()" class="btn">1996</button>
+                    <button onclick="Change1996()" class="btn-hover btn-2 color-8">1996</button>
                 </div>
-                <hr>
             </div>
-
-
         </div>
     </main>
             <!-- Footer Section-->
