--- a/index.html
+++ b/index.html
@@ -26,24 +26,36 @@
         <header class=" text-black text-center py-2">
             <div class="container">
                 <h1 class="display-4"> On My Birthday </h1>
-                <p class="lead"> I was born on August 21, 2007. Browse through & see more events that happened during this day!</p>
+                <p class="lead"> <b> I was born on August 21, 2007. Browse through & see more events that happened during this day! </p>
             </div>
         </header>
 
-
-        <!--Image Class-->
-<div class="row g-4">
-    <div class="col-lg-4 col-sm-12 col-12 zoom mx-auto ">
-      <div class="img-thumbnail borderfix card-image">
-        <img src="IMG_9901.JPG" class="img-fluid">
-        <br> 
-        <br>
-        <h5 class=>What else happened on my birthday?</h5>
-        <p class="lead">Click on the buttons below to see somethings that happened on my birthday.</p>
-      </div>
-    </div>
+        <main>
+            <div class="container">
+                <div class="background">
+                    <div class="row m-3">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12  text-center">
+                            <img class="img1 img-fluid" src="images/IMG_9901.JPG"  width="500" 
+                            height="500" id="Change-Image">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-8 text-center m-3">
+                            <h3 id="Change-Text"> This was me in Florida while on vacation for spring break. </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
              <!--Buttons-->
              <div class="row text-center justify-content-center m-3 g-4 align-items-center">
+                <div class="col-12 col-lg-2 my-2">
+                    <button onclick="Change2007()" class="btn-hover btn-2 color-8">Home</button>
+                </div>
                 <div class="col-12 col-lg-2 my-2">
                     <button onclick="Change1264()" class="btn-hover btn-2 color-8">1264</button>
                 </div>
